<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/SongImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/black"
        android:contentDescription="@string/songimage"
        android:cropToPadding="true"
        android:src="@drawable/ic_launcher_background" />

    <ImageButton
        android:id="@+id/exit_btn"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/SongImage"
        android:contentDescription="@string/exit"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/play_btn"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SongImage"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="12dp"
        android:layout_toEndOf="@+id/SongImage"
        android:contentDescription="@string/play"
        android:src="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/pause_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pause"
        android:src="@android:drawable/ic_media_pause" />

    <ImageButton
        android:id="@+id/prev_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/previous"
        android:src="@android:drawable/ic_media_previous" />


    <ImageButton
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next"
        android:src="@android:drawable/ic_media_next" />


</RelativeLayout>