<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">


    <ImageView
        android:id="@+id/SongImage"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:contentDescription="@string/songimage"
        android:cropToPadding="true"
        android:padding="7dp"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/notification_title_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:maxLength="25"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/exit_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/exit"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">


            <ImageButton
                android:id="@+id/play_btn"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:contentDescription="@string/play"
                android:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/pause_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/pause"
                android:src="@android:drawable/ic_media_pause" />

            <ImageButton
                android:id="@+id/prev_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/previous"
                android:src="@android:drawable/ic_media_previous" />


            <ImageButton
                android:id="@+id/next_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/next"
                android:src="@android:drawable/ic_media_next" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>